--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@ maskUnits="userSpaceOnUse">
 <script>
     // Add event listener to redirect to /dark
     document.getElementById("darkBtn").addEventListener("click", function () {
-      window.location.href = "/dist/index.html";
+      window.location.href = "dark.html";
     });
   </script>
 </body>
