--- a/dark.html
+++ b/dark.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Rose </title>
-  <link rel="stylesheet" href="/dist/style.css">
+  <link rel="stylesheet" href="dark.css">
   <style>
     button {
       position: absolute;
@@ -26,7 +26,7 @@
 <head>
   <meta charset="UTF-8">
   <title>rose </title>
-  <link rel="stylesheet" href="/dist/style.css">
+  <link rel="stylesheet" href="dark.css">
 
 </head>
 <body>
@@ -83,7 +83,7 @@ maskUnits="userSpaceOnUse">
 <script>
     // Add event listener to redirect to /dark
     document.getElementById("lightBtn").addEventListener("click", function () {
-      window.location.href = "/";
+      window.location.href = "index.html";
     });
   </script>
 </body>
