--- a/dark.html
+++ b/dark.html
@@ -2,7 +2,7 @@
 <html lang="en" >
 <head>
   <meta charset="UTF-8">
-  <title>Rose </title>
+  <title>For my love</title>
   <link rel="stylesheet" href="dark.css">
   <style>
     button {
