--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" >
 <head>
   <meta charset="UTF-8">
-  <title>san valentin Encoded</title>
+  <title>for my love</title>
   <link rel="stylesheet" href="./style.css">
    <style>
     button {
